# monofonIC

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml  example.conf
.github/workflows/: cmake-multi-platform.yml
include/: config_file.hh  cosmology_calculator.hh  cosmology_parameters.hh  grid_fft.hh  ic_analytical.hh  logger.hh  particle_plt.hh  random_plugin.hh  terminal_colors.hh
include/math/: interpolate.hh
src/: ic_analytical.cc  ic_generator.cc  main.cc  output_plugin.cc  random_plugin.cc  transfer_function_plugin.cc
src/plugins/: output_gadget_hdf5.cc  output_swift.cc  transfer_CLASS.cc  transfer_CLASS.hh
tests/: CMakeLists.txt  README.md  run_plane_wave_test.cmake  test_transfer_functions.cc
tests/configs/: test_plane_wave_model1.conf  test_plane_wave_model2.conf  test_plane_wave_model3.conf
tests/configs/transfer/: dark_energy.conf  fiducial.conf  high_z.conf  low_omega_m.conf  massive_nu.conf
tests/references/: test_1lpt_sc_generic.hdf5  test_2lpt_baryons_vrel_gadget.hdf5  test_2lpt_sc_gadget.hdf5  test_3lpt_bcc_swift.hdf5
tests/references/plane_waves/: analytical_lpt_model1.nb  analytical_lpt_model2.nb  analytical_lpt_model3.nb
tests/references/transfer/CLASS/: dark_energy.txt  fiducial.txt  high_z.txt  low_omega_m.txt
tests/references/transfer/eisenstein/: low_omega_m.txt  massive_nu.txt
tests/scripts/: compare_transfer_functions.py  generate_transfer_references.sh  plane_wave_test_utils.py  test_plane_wave_model1.py  test_plane_wave_model2.py  test_plane_wave_model3.py
